cmake_minimum_required(VERSION 3.20)
project(tcpppl-ex)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -O2 -Wextra")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set (SRC_DIR "${CMAKE_CURRENT_LIST_DIR}/src/")

# List of exercises as compilation targets
add_executable(x_3_3 "${SRC_DIR}/x_3_3.cpp")
add_executable(x_3_5 "${SRC_DIR}/x_3_5.cpp")
add_executable(x_3_6 "${SRC_DIR}/x_3_6.cpp")
add_executable(x_5_5 "${SRC_DIR}/x_5_5.cpp")
add_executable(x_5_6 "${SRC_DIR}/x_5_6.cpp")
add_executable(x_5_7 "${SRC_DIR}/x_5_7.cpp")
add_executable(x_5_8 "${SRC_DIR}/x_5_8.cpp")
add_executable(x_5_9 "${SRC_DIR}/x_5_9.cpp")
add_executable(x_5_10 "${SRC_DIR}/x_5_10.cpp")
add_executable(x_6_2 "${SRC_DIR}/x_6_2.cpp")
add_executable(x_6_3_regular "${SRC_DIR}/x_6_3.cpp")
add_executable(x_6_3_optimized "${SRC_DIR}/x_6_3.cpp")
target_compile_options(x_6_3_regular PRIVATE -Wall -Wextra -O0)
target_compile_options(x_6_3_optimized PRIVATE -Wall -Wextra -O2)
add_executable(x_6_4 "${SRC_DIR}/x_6_4.cpp")
add_executable(x_6_5 "${SRC_DIR}/x_6_5.cpp")
add_executable(x_7_1 "${SRC_DIR}/x_7_1.cpp")
